@@ -22,16 +22,16 @@ import net.sourceforge.stripes.exception.StripesServletException;
 import net.sourceforge.stripes.util.HttpUtil;
 import net.sourceforge.stripes.util.Log;
 
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletRequestWrapper;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.Filter;
+import jakarta.servlet.FilterChain;
+import jakarta.servlet.FilterConfig;
+import jakarta.servlet.ServletContext;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletRequestWrapper;
+import jakarta.servlet.http.HttpServletResponse;
 import java.beans.Introspector;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
@@ -132,7 +132,7 @@ public class StripesFilter implements Filter {
             clazz = RuntimeConfiguration.class;
 
         try {
-            Configuration configuration = clazz.newInstance();
+            Configuration configuration = clazz.getDeclaredConstructor().newInstance();
             configuration.setBootstrapPropertyResolver(bootstrap);
             configuration.init();
             return configuration;
