@@ -14,25 +14,14 @@
  */
 package net.sourceforge.stripes.mock;
 
-import javax.servlet.Filter;
-import javax.servlet.RequestDispatcher;
-import javax.servlet.Servlet;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletContextEvent;
-import javax.servlet.ServletContextListener;
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServlet;
+import jakarta.servlet.*;
+import jakarta.servlet.descriptor.JspConfigDescriptor;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServlet;
 import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 /**
  * <p>Mock implementation of a ServletContext.  Provides implementation the most commonly used
@@ -82,16 +71,28 @@ public class MockServletContext implements ServletContext {
     }
 
     /** Always returns 2. */
-    public int getMajorVersion() { return 2; }
+    public int getMajorVersion() { return 4; }
 
     /** Always returns 4. */
-    public int getMinorVersion() { return 4; }
+    public int getMinorVersion() { return 0; }
+
+    @Override
+    public int getEffectiveMajorVersion() {
+        return 0;
+    }
+
+    @Override
+    public int getEffectiveMinorVersion() {
+        return 0;
+    }
 
     /** Always returns null (i.e. don't know). */
     public String getMimeType(String file) { return null; }
 
-    /** Always returns null (i.e. there are no resources under this path). */
-    public Set<?> getResourcePaths(String path) {
+    /**
+     * Always returns null (i.e. there are no resources under this path).
+     */
+    public Set<String> getResourcePaths(String path) {
         return null;
     }
 
@@ -176,6 +177,11 @@ public class MockServletContext implements ServletContext {
         return Collections.enumeration( this.initParameters.keySet() );
     }
 
+    @Override
+    public boolean setInitParameter(String name, String value) {
+        return false;
+    }
+
     /** Gets an attribute that has been set on the context (i.e. application) scope. */
     public Object getAttribute(String name) {
         return this.attributes.get(name);
@@ -201,6 +207,161 @@ public class MockServletContext implements ServletContext {
         return this.contextName;
     }
 
+    @Override
+    public ServletRegistration.Dynamic addServlet(String servletName, String className) {
+        return null;
+    }
+
+    @Override
+    public ServletRegistration.Dynamic addServlet(String servletName, Servlet servlet) {
+        return null;
+    }
+
+    @Override
+    public ServletRegistration.Dynamic addServlet(String servletName, Class<? extends Servlet> servletClass) {
+        return null;
+    }
+
+    @Override
+    public ServletRegistration.Dynamic addJspFile(String servletName, String jspFile) {
+        return null;
+    }
+
+    @Override
+    public <T extends Servlet> T createServlet(Class<T> clazz) throws ServletException {
+        return null;
+    }
+
+    @Override
+    public ServletRegistration getServletRegistration(String servletName) {
+        return null;
+    }
+
+    @Override
+    public Map<String, ? extends ServletRegistration> getServletRegistrations() {
+        return null;
+    }
+
+    @Override
+    public FilterRegistration.Dynamic addFilter(String filterName, String className) {
+        return null;
+    }
+
+    @Override
+    public FilterRegistration.Dynamic addFilter(String filterName, Filter filter) {
+        return null;
+    }
+
+    @Override
+    public FilterRegistration.Dynamic addFilter(String filterName, Class<? extends Filter> filterClass) {
+        return null;
+    }
+
+    @Override
+    public <T extends Filter> T createFilter(Class<T> clazz) throws ServletException {
+        return null;
+    }
+
+    @Override
+    public FilterRegistration getFilterRegistration(String filterName) {
+        return null;
+    }
+
+    @Override
+    public Map<String, ? extends FilterRegistration> getFilterRegistrations() {
+        return null;
+    }
+
+    @Override
+    public SessionCookieConfig getSessionCookieConfig() {
+        return null;
+    }
+
+    @Override
+    public void setSessionTrackingModes(Set<SessionTrackingMode> sessionTrackingModes) {
+
+    }
+
+    @Override
+    public Set<SessionTrackingMode> getDefaultSessionTrackingModes() {
+        return null;
+    }
+
+    @Override
+    public Set<SessionTrackingMode> getEffectiveSessionTrackingModes() {
+        return null;
+    }
+
+    @Override
+    public void addListener(String className) {
+
+    }
+
+    @Override
+    public <T extends EventListener> void addListener(T t) {
+
+    }
+
+    @Override
+    public void addListener(Class<? extends EventListener> listenerClass) {
+
+    }
+
+    @Override
+    public <T extends EventListener> T createListener(Class<T> clazz) throws ServletException {
+        return null;
+    }
+
+    @Override
+    public JspConfigDescriptor getJspConfigDescriptor() {
+        return null;
+    }
+
+    @Override
+    public ClassLoader getClassLoader() {
+        return null;
+    }
+
+    @Override
+    public void declareRoles(String... roleNames) {
+
+    }
+
+    @Override
+    public String getVirtualServerName() {
+        return null;
+    }
+
+    @Override
+    public int getSessionTimeout() {
+        return 0;
+    }
+
+    @Override
+    public void setSessionTimeout(int sessionTimeout) {
+
+    }
+
+    @Override
+    public String getRequestCharacterEncoding() {
+        return null;
+    }
+
+    @Override
+    public void setRequestCharacterEncoding(String encoding) {
+
+    }
+
+    @Override
+    public String getResponseCharacterEncoding() {
+        return null;
+    }
+
+    @Override
+    public void setResponseCharacterEncoding(String encoding) {
+
+    }
+
     /** Adds a filter to the end of filter chain that will be used to filter requests.*/
     public MockServletContext addFilter(Class<? extends Filter> filterClass,
                           String filterName,
@@ -211,7 +372,7 @@ public class MockServletContext implements ServletContext {
             config.setServletContext(this);
             if (initParams != null) config.addAllInitParameters(initParams);
 
-            Filter filter = filterClass.newInstance();
+            Filter filter = filterClass.getDeclaredConstructor().newInstance();
             filter.init(config);
             this.filters.add(filter);
             return this;
@@ -267,7 +428,7 @@ public class MockServletContext implements ServletContext {
             config.setServletContext(this);
             if (initParams != null) config.addAllInitParameters(initParams);
 
-            this.servlet = servletClass.newInstance();
+            this.servlet = servletClass.getDeclaredConstructor().newInstance();
             this.servlet.init(config);
             return this;
         }
